Parser/test_cases/good/expressionblock.cl
class Test {
  foo:Test;
  bar():Int { {1;32;}};
};
