Parser/test_cases/bad/badformals.cl
class Foo {
    bad(x) : Int { 0 };
};
